--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://javarmk:123456789Mongdb@cluster0.u5mfuga.mongodb.net/test
+MONGO_URI=mongodb+srv://javarmk:123456789Mongdb@cluster0.u5mfuga.mongodb.net/SocialNetwork
 JWT_SECRET=sdjkfh8923yhjdksbfma@#*(&@*!^#&@bhjb2qiuhesdbhjdsfg839ujkdhfjk
 PORT=3001
